log_output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hashgenerator-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hashgenerator
  template:
    metadata:
      labels:
        app: hashgenerator
    spec:
      volumes:
        - name: log-output-file
          emptyDir: {}
        # - name: ping-pong-pv
        #   persistentVolumeClaim:
        #     claimName: ping-pong-claim
        - name: log-output-config
          configMap: 
            name: log-output-config
            items:
              - key: information.txt
                path: information.txt
      containers:
        - name: hashgenerator
          image: nickleezx/log_output:0.0.9
          imagePullPolicy: Always
          volumeMounts:
            - name: log-output-file
              mountPath: /usr/src/app/shared
            # - name: ping-pong-pv
            #   mountPath: /usr/src/app/shared1
            - name: log-output-config
              mountPath: /config
              readOnly: true
        # - name: file-reader-app
        #   image: nickleezx/file-reader-app:0.0.8
        #   imagePullPolicy: IfNotPresent
        #   env:
        #     - name: PORT
        #       value: "3001"
        #   volumeMounts:
        #     - name: log-output-file
        #       mountPath: /usr/src/app/shared

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ping-pong-app
  template:
    metadata:
      labels:
        app: ping-pong-app
    spec:
      # volumes:
      #   - name: ping-pong-pv
      #     persistentVolumeClaim:
      #       claimName: ping-pong-claim
      containers:
        - name: ping-pong-app
          image: nickleezx/ping-pong-app:0.0.8
          imagePullPolicy: Always
