log_output/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: hashgenerator-svc
#   namespace: exercises
# spec:
#   type: ClusterIP
#   selector:
#     app: hashgenerator
#   ports:  
#     - name: hashgenerator-port
#       port: 1234
#       protocol: TCP
#       targetPort: 3002
#     - name: file-reader-port
#       port: 2345
#       protocol: TCP
#       targetPort: 3001

# ---
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong-app
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 3001
