log_output/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashgenerator-ingress
  namespace: exercises
spec:
  rules:
    - http:
        paths:
          - path: /api/pingpong
            pathType: Prefix
            backend:
              service:
                name: ping-pong-svc
                port:
                  number: 1234
          # - path: /file-content
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: hashgenerator-svc
          #       port:
          #         number: 2345
          - path: /
            pathType: Exact
            backend:
              service:
                name: hashgenerator-svc
                port:
                  number: 1234
