log_output/manifests/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: routes
  namespace: exercises
spec:
  parentRefs:
  - name: dwk-gke-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /api/pingpong
    filters:
      - type: URLRewrite
        urlRewrite:
          path:
            type: ReplacePrefixMatch
            replacePrefixMatch: /
    backendRefs:
    - name: ping-pong-svc
      port: 1234

  - matches:
    - path:
        type: Exact
        value: /
    backendRefs:
    - name: hashgenerator-svc
      port: 1234
